# generic

./: .editorconfig  .gitattributes  .gitignore  .lintstagedrc.yml  .mise.toml  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  Taskfile.yml  eslint.config.mjs  mise.toml  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.cwai/: testing.md
.cwai/prompts/: clarify.md  outline.md
.cwai/templates/: plan.md  prompt.md  stack.md
.cwai/templates/outline/: game-design.md  high-level-design.md  low-level-design.md  product-requirement.md  specs-document.md
.github/actions/setup-tools/: action.yml
.github/prompts/: breakdown.prompt.md  implement.prompt.md
.github/workflows/: ci.build.yml  ci.quality.yml  ci.release.yml  ci.version.yml  ci.yml
.husky/: pre-commit
.scripts/: fix-mise-pwsh.sh  lint-powershell.ps1  lint-shellcheck.ps1  lint-shellcheck.sh  run-pester.ps1
.uvx-install/: bootstrap.py
_uvx_install/: bootstrap.py
docs/: index.md
src/: cli.ps1  cli.sh  greeter.ps1  greeter.sh
test/: greeter.Tests.ps1  greeter.test.bats
