[project]
name = "generic-template-bootstrap"
version = "1.0.0"
description = "Bootstrap script for generic template project"
authors = [{ name = "Templ Project" }]
license = { text = "MIT" }
requires-python = ">=3.9"

[project.scripts]
bootstrap = ".uvx-install.bootstrap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
docs = ["mkdocs>=1.5.0", "mkdocs-material>=9.5.0", "mkdocstrings[python]>=0.24.0"]

[tool.hatch.build.targets.wheel]
packages = [".uvx-install"]

[tool.hatch.build.targets.wheel.force-include]
".uvx-install" = ".uvx-install"

[dependency-groups]
dev = ["mkdocs>=1.5.0", "mkdocs-material>=9.5.0", "mkdocstrings[python]>=0.24.0"]
