[project]
name = "generic-template-bootstrap"
version = "1.0.0"
description = "Bootstrap script for generic template project"
authors = [{ name = "Templ Project" }]
license = { text = "MIT" }
requires-python = ">=3.11"

[project.scripts]
bootstrap = "_uvx_install.bootstrap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
docs = ["mkdocs>=1.5.0", "mkdocs-material>=9.5.0", "mkdocstrings[python]>=0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["_uvx_install"]

[dependency-groups]
dev = ["mkdocs>=1.5.0", "mkdocs-material>=9.5.0", "mkdocstrings[python]>=0.24.0"]
